# microcat-rs

./: .gitignore  Cargo.toml  Dockerfile  Justfile  README.md  build.json  build.rs  fmt.json  libcamera.md  lint.json  rust-toolchain.toml  timing_data.csv
.cargo/: config.toml
.github/workflows/: build-v26.yml  build.yml  format.yml  rust.yml
libcamera-3.2.0/usr/local/include/libcamera/libcamera/: control_ids.h
libcamera-3.2.0/usr/local/lib/aarch64-linux-gnu/: libcamera-base.so.0.3.2
libcamera-3.2.0/usr/local/lib/aarch64-linux-gnu/libcamera/: ipa_rpi_vc4.so.sign
libcamera-3.2.0/usr/local/lib/aarch64-linux-gnu/pkgconfig/: libcamera-base.pc  libcamera.pc
libcamera-3.2.0/usr/local/libexec/libcamera/: raspberrypi_ipa_proxy
libcamera/usr/local/include/libcamera/libcamera/: control_ids.h  version.h
libcamera/usr/local/include/libcamera/libcamera/ipa/: raspberrypi_ipa_interface.h
libcamera/usr/local/lib/aarch64-linux-gnu/: libcamera-base.so.0.4  libcamera-base.so.0.4.0  libcamera.so.0.4  libcamera.so.0.4.0  libpisp.so.1  libpisp.so.1.0.7
libcamera/usr/local/lib/aarch64-linux-gnu/libcamera/: ipa_rpi_pisp.so.sign  ipa_rpi_vc4.so.sign
libcamera/usr/local/lib/aarch64-linux-gnu/pkgconfig/: libcamera-base.pc  libcamera.pc  libpisp.pc
libcamera/usr/local/libexec/libcamera/: raspberrypi_ipa_proxy
proto/: encoder.proto  imu.proto
src/: consts.rs  main.rs  motors.rs  rgb.rs  serial.rs
src/microcat-rs/: .gitignore  Cargo.toml  Dockerfile  Justfile  README.md  build.rs  package.xml
src/microcat-rs/.cargo/: config.toml
src/microcat-rs/.github/workflows/: format.yml  lint.yml
src/microcat-rs/src/: camera.rs  consts.rs  imu.rs  main.rs  motors.rs  pressure.rs  rgb.rs  serial.rs  time_sync.rs
src/microcat-rs/udev/: 9-gpiomem.rules
src/microcat_msgs/: CMakeLists.txt  package.xml
src/microcat_msgs/msg/: Battery.msg  Imu.msg  Led.msg  MotorControl.msg  MotorStatus.msg  PressureData.msg  ToneDetector.msg
src/serial/: encoder.rs
udev/: 10-microcat.rules
