[package]
name = "microcat-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
bitvec = "1.0.1"
clap = { version = "4.5.7", features = ["derive"] }
rppal = "0.18.0"
signal-hook = "0.3.17"
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
icm20608g = { git = "https://github.com/miloom/icm20608g.git", features = ["visualize"] }

