[package]
name = "microcat-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
bitvec = "1.0.1"
clap = { version = "4.5.7", features = ["derive"] }
rppal = "0.18.0"
signal-hook = "0.3.17"
tokio = { version = "1.38.0", features = ["io-util", "macros", "rt-multi-thread"] }
icm20608g = { git = "https://github.com/miloom/icm20608g.git", features = ["visualize"] }
drv8830 = { git = "https://github.com/miloom/drv8830.git" }
bytes = "1.7.1"
tokio-serial = "5.4.4"
cobs = "0.2.3"
prost = "0.13.2"
prost-types = "0.13.2"
anyhow = "1.0.86"
rosrust = "0.9.11"
rosrust_msg = "0.1.7"


[build-dependencies]
prost-build = "0.13.2"


[features]
default = ["proto"]
proto = []

