[package]
name = "microcat-rs"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
rppal = { version = "0.18.0", features = ["embedded-hal"] }
tokio = { version = "1.38.0", features = ["io-util", "macros", "rt-multi-thread", "signal", "sync", "time"] }
icm20608g = { git = "https://github.com/miloom/icm20608g.git", features = ["visualize"] }
drv8830 = { git = "https://github.com/miloom/drv8830.git" }
bytes = "1.7.1"
tokio-serial = "5.4.4"
cobs = "^0.3"
prost = "^0.13"
anyhow = "^1.0"
rclrs = { version = "*" }
std_msgs = { version = "*" }
serde = { version = "^1.0", features = ["derive"] }
microcat_msgs = { version = "0.1", features = ["serde"] }



[build-dependencies]
git2 = "0.20.0"
prost-build = "0.13.2"


