[package]
name = "microcat-rs"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[features]
v21_hardware = []
v26_hardware = []

[dependencies]
rppal = { version = "0.18.0", features = ["embedded-hal"] }
tokio = { version = "1.38.0", features = ["io-util", "macros", "rt-multi-thread", "signal", "sync", "time"] }
bytes = "1.7.1"
tokio-serial = "5.4.4"
cobs = "^0.3"
prost = "^0.13"
rclrs = { version = "*" }
std_msgs = { version = "*" }
sensor_msgs = { version = "*" }
builtin_interfaces = { version = "*" }
serde = { version = "^1.0", features = ["derive"] }
microcat_msgs = { version = "0.1", features = ["serde"] }
tracing = { version = "0.1.41", features = ["release_max_level_info", "max_level_trace"] }
tracing-subscriber = "0.3.19"
tracing-appender = "0.2.3"
# This fork and branch has fixes for cross compilation
libcamera = { git = "https://github.com/fishrockz/libcamera-rs.git", branch = "willsalmon/get-libcamera-version" }


[build-dependencies]
git2 = "0.20.0"
prost-build = "0.13.2"


